Agregando todo lo nuevo